test_suite/tests/ui/fail_with_invalid_capture_docs_attr.stderr
error: Invalid capture_docs value. Expected one of: "default", "always", "never"
 --> tests/ui/fail_with_invalid_capture_docs_attr.rs:6:29
  |
6 | #[scale_info(capture_docs = "invalid")]
  |                             ^^^^^^^^^
